# pointcloud-plane-segmentation

./: CMakeLists.txt  README.md
data/: README.md  blue.pcd
rspd/: CMakeLists.txt
rspd/include/rspd/: angleutils.h  boundaryvolumehierarchy.h  circle.h  connectivitygraph.h  cylinder.h  geometryutils.h  normalestimator.h  planarpatch.h  plane.h  planedetector.h  point.h  pointcloud.h  primitive.h  primitivedetector.h  rect.h  statisticsutils.h  unionfind.h
rspd/src/: connectivitygraph.cpp  planarpatch.cpp  plane.cpp  planedetector.cpp
src/: main.cpp
